# mk1-vfs

./: .gitignore  README.md
backend/: .gitignore  README.md  docker-compose.yml
backend/api/: Dockerfile  README.md  pyproject.toml
backend/api/src/vfs_api/: __main__.py  db_utils.py  routes.py  schemas.py
backend/db/: Dockerfile  init.sh
backend/db/sql/: init.sql
backend/db/sql/functions/: directory_copy.sql  directory_create.sql  directory_delete.sql  directory_details.sql  directory_list.sql  directory_listd.sql  directory_listf.sql  directory_path.sql  directory_search.sql  directory_tree.sql  directory_update.sql  file_copy.sql  file_create.sql  file_delete.sql  file_details.sql  file_search.sql  file_tags_add.sql  file_tags_list.sql  file_tags_manage.sql  file_tags_remove.sql  file_tags_set.sql  file_update.sql  item_search.sql  tags_list.sql  validate_directory_name_exists.sql  validate_directory_ownership.sql  validate_file_name_exists.sql  validate_file_ownership.sql  validate_is_subdirectory.sql  validate_tags_exist.sql
backend/test/: db_utils.sh  load_mock_data.sql  mock_data.md  test_routes.py
frontend/: YOUR CODE GOES HERE.txt
frontend/mk1-frontend/: index.html  package-lock.json  package.json
frontend/mk1-frontend/src/: App.css  App.jsx
frontend/mk1-frontend/src/components/: Buttons.jsx  CreateDoc.jsx  Directory.jsx  File.jsx  Header.css  Header.jsx
frontend/mk1-frontend/src/services/: frontend_services.js
frontend/mk1_vfs/: package-lock.json  package.json
frontend/mk1_vfs/services/: mk1-vfs_service.js
frontend/mk1_vfs/src/: App.jsx
